Update 1. 숫자와 문자.md

--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -1,1 +1,48 @@
+# 숫자와 문자
+숫자와 문자 (1/4)
+- Sublime text 사용
+- html -> tab키 누를 시 기본적인 코드 뜸
+- body 안에서 script -> tab키 누를 시 코드 뜸
+- 크롬 들어가서 ctrl + O 누르고 파일 선택
+
+alert(1); 작성 => 경고창 1 뜸 (정수)
+alert(1.1); 작성 => 경고창 1.1 뜸 (소수점)
+alert(1.2 + 1.3); 작성 => 경고창 2.5 뜸
+alert(2 * 5); 작성 => 경고창 10 뜸
+alert(6 / 2); 작성 => 경고창 3 뜸
+console.log(1); 작성 => 콘솔창에 1 뜸
+
+숫자와 문자 (2/4)
+Math.pow(3,2); => 3의 2승
+Math.round(10.6); => 10.6의 반올림 11
+Math.ceil(10.2); => 10.2의 올림 11
+Math.floor(10.6); => 10.6의 내림 10
+Math.sqrt(9); => 루트9인 3
+Math.random(); => 0부터 1.0 사이의 랜덤한 숫자
+
+숫자와 문자 (3/4)
+- 문자는 "(큰 따옴표) 혹은 '(작은 따옴표) 중의 하나로 감싸야 함
+- 큰, 작은 따옴표 둘 다 문자열 (c랑 다름)
+- alert("coding everybody");
+- alert('coding everybody');
+- alert("hello world'"); => 가능
+- alert('hello world"'); => 가능
+
+alert(typeof "1") => 문자이므로 string 출력
+alert(typeof 1) => 숫자이므로 number 출력
+
+문자열 안에 작은 따옴표나 큰따옴표를 넣는 방법
+- alert('egoing's javascript') => 불가능
+- alert('egoing\'s javascript') => 가능! \ 넣기 (이스케이프 기법) 
+
+숫자와 문자 (4/4)
+여러 줄 표시할 때 줄바꿈 \n 사용
+- alert("안녕하세요.\n생활코딩의 세계에 오신 것을 환영합니다");
+
+alert("coding"+" everybody"); => 문자열끼리 더함. coding everybody 출력
+alert("coding everybody".length); => 문자열 길이 출력. 16 출력
+- 1 + 1 => 2 (숫자끼리)
+- “1” + “1” => “11” (문자열끼리)
+
+"code".indexOf("e"); => e의 인덱스 번호 3 출력
 
