Update 1. 숫자와 문자.md

--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -1,5 +1,5 @@
 # 숫자와 문자
-숫자와 문자 (1/4)
+### 숫자와 문자 (1/4)
 - Sublime text 사용
 - html -> tab키 누를 시 기본적인 코드 뜸
 - body 안에서 script -> tab키 누를 시 코드 뜸
@@ -12,7 +12,7 @@ alert(2 * 5); 작성 => 경고창 10 뜸
 alert(6 / 2); 작성 => 경고창 3 뜸
 console.log(1); 작성 => 콘솔창에 1 뜸
 
-숫자와 문자 (2/4)
+### 숫자와 문자 (2/4)
 Math.pow(3,2); => 3의 2승
 Math.round(10.6); => 10.6의 반올림 11
 Math.ceil(10.2); => 10.2의 올림 11
@@ -20,7 +20,7 @@ Math.floor(10.6); => 10.6의 내림 10
 Math.sqrt(9); => 루트9인 3
 Math.random(); => 0부터 1.0 사이의 랜덤한 숫자
 
-숫자와 문자 (3/4)
+### 숫자와 문자 (3/4)
 - 문자는 "(큰 따옴표) 혹은 '(작은 따옴표) 중의 하나로 감싸야 함
 - 큰, 작은 따옴표 둘 다 문자열 (c랑 다름)
 - alert("coding everybody");
@@ -35,7 +35,7 @@ alert(typeof 1) => 숫자이므로 number 출력
 - alert('egoing's javascript') => 불가능
 - alert('egoing\'s javascript') => 가능! \ 넣기 (이스케이프 기법) 
 
-숫자와 문자 (4/4)
+### 숫자와 문자 (4/4)
 여러 줄 표시할 때 줄바꿈 \n 사용
 - alert("안녕하세요.\n생활코딩의 세계에 오신 것을 환영합니다");
 
