Update 1. 숫자와 문자.md

--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -7,9 +7,9 @@
 </br>
 
 `alert(1);`
-- 경고창 1 뜸 (정수)
+> 경고창 1 뜸 (정수)
 `alert(1.1);`
-- 경고창 1.1 뜸 (소수점)
+> 경고창 1.1 뜸 (소수점)
 alert(1.2 + 1.3); 작성 => 경고창 2.5 뜸
 alert(2 * 5); 작성 => 경고창 10 뜸
 alert(6 / 2); 작성 => 경고창 3 뜸
