--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -27,12 +27,23 @@
 ---
 
 ### 숫자와 문자 (2/4)
-Math.pow(3,2); => 3의 2승
-Math.round(10.6); => 10.6의 반올림 11
-Math.ceil(10.2); => 10.2의 올림 11
-Math.floor(10.6); => 10.6의 내림 10
-Math.sqrt(9); => 루트9인 3
-Math.random(); => 0부터 1.0 사이의 랜덤한 숫자
+`Math.pow(3,2);` 
+- 3의 2승
+  
+`Math.round(10.6);`
+- 10.6의 반올림 11
+  
+`Math.ceil(10.2);` 
+- 10.2의 올림 11
+  
+`Math.floor(10.6);` 
+- 10.6의 내림 10
+  
+`Math.sqrt(9);` 
+- 루트9인 3
+  
+`Math.random();`
+- 0부터 1.0 사이의 랜덤한 숫자
 
 ### 숫자와 문자 (3/4)
 - 문자는 "(큰 따옴표) 혹은 '(작은 따옴표) 중의 하나로 감싸야 함
