Update 1. 숫자와 문자.md

--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -50,13 +50,13 @@
 ### 숫자와 문자 (3/4)
 - 문자는 "(큰 따옴표) 혹은 '(작은 따옴표) 중의 하나로 감싸야 함
 - 큰, 작은 따옴표 둘 다 문자열 (c랑 다름)
-- alert("coding everybody");
-- alert('coding everybody');
-- alert("hello world'"); => 가능
-- alert('hello world"'); => 가능
+- `alert("coding everybody");`
+- `alert('coding everybody');`
+- `alert("hello world'");` => 가능
+- `alert('hello world"');` => 가능
 
-alert(typeof "1") => 문자이므로 string 출력
-alert(typeof 1) => 숫자이므로 number 출력
+`alert(typeof "1")` => 문자이므로 string 출력
+`alert(typeof 1)` => 숫자이므로 number 출력
 
 문자열 안에 작은 따옴표나 큰따옴표를 넣는 방법
 - alert('egoing's javascript') => 불가능
