--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -54,9 +54,13 @@
 - `alert('coding everybody');`
 - `alert("hello world'");` => 가능
 - `alert('hello world"');` => 가능
+</br>
 
-`alert(typeof "1")` => 문자이므로 string 출력
-`alert(typeof 1)` => 숫자이므로 number 출력
+`alert(typeof "1")` 
+- 문자이므로 string 출력
+  
+`alert(typeof 1)` 
+- 숫자이므로 number 출력
 
 문자열 안에 작은 따옴표나 큰따옴표를 넣는 방법
 - alert('egoing's javascript') => 불가능
