Update 1. 숫자와 문자.md

--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -64,8 +64,8 @@
 </br>
 
 문자열 안에 작은 따옴표나 큰따옴표를 넣는 방법
-- alert('egoing's javascript') => 불가능
-- alert('egoing\'s javascript') => 가능! \ 넣기 (이스케이프 기법) 
+- `alert('egoing's javascript')` => 불가능
+- `alert('egoing\'s javascript')` => 가능! \ 넣기 (이스케이프 기법) 
 
 ### 숫자와 문자 (4/4)
 여러 줄 표시할 때 줄바꿈 \n 사용
