Update 1. 숫자와 문자.md

--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -67,14 +67,20 @@
 - `alert('egoing's javascript')` => 불가능
 - `alert('egoing\'s javascript')` => 가능! \ 넣기 (이스케이프 기법) 
 
+---
+
 ### 숫자와 문자 (4/4)
-여러 줄 표시할 때 줄바꿈 \n 사용
-- alert("안녕하세요.\n생활코딩의 세계에 오신 것을 환영합니다");
+- 여러 줄 표시할 때 줄바꿈 \n 사용
+- `alert("안녕하세요.\n생활코딩의 세계에 오신 것을 환영합니다");`
+</br>
 
-alert("coding"+" everybody"); => 문자열끼리 더함. coding everybody 출력
-alert("coding everybody".length); => 문자열 길이 출력. 16 출력
-- 1 + 1 => 2 (숫자끼리)
-- “1” + “1” => “11” (문자열끼리)
+`alert("coding"+" everybody");` => 문자열끼리 더함. coding everybody 출력
+`alert("coding everybody".length);` => 문자열 길이 출력. 16 출력
+</br>
 
-"code".indexOf("e"); => e의 인덱스 번호 3 출력
+- `1 + 1 => 2` (숫자끼리)
+- `“1” + “1” => “11”` (문자열끼리)
+</br>
+
+`"code".indexOf("e");` => e의 인덱스 번호 3 출력
 
