Update 1. 숫자와 문자.md

--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -78,8 +78,8 @@
 - `alert("안녕하세요.\n생활코딩의 세계에 오신 것을 환영합니다");`
 </br>
 
-`alert("coding"+" everybody");` => 문자열끼리 더함. coding everybody 출력
-`alert("coding everybody".length);` => 문자열 길이 출력. 16 출력
+- `alert("coding"+" everybody");` => 문자열끼리 더함. coding everybody 출력
+- `alert("coding everybody".length);` => 문자열 길이 출력. 16 출력
 </br>
 
 - `1 + 1 => 2` (숫자끼리)
