--- a/자바스크립트/2. 변수.md
+++ b/자바스크립트/2. 변수.md
@@ -1,1 +1,18 @@
 # 변수
+
+### 변수 (1/2)
+- 변수는 var로 시작
+- var 생략 가능 but 유효범위에 영향을 미침
+- //은 주석
+- 세미콜론(;)은 하나의 구문이 끝났음을 나타냄
+- 자바스크립트에서는 생략 가능하지만 한 줄에 여러 구문을 사용하고 싶을 때 세미콜론이 유용
+
+`
+var a = 1;
+alert(a+1);  //2
+ 
+var a = 2;
+alert(a+1);  //3
+`
+
+### 변수 (2/2)
