--- a/자바스크립트/2. 변수.md
+++ b/자바스크립트/2. 변수.md
@@ -7,10 +7,12 @@
 - 세미콜론(;)은 하나의 구문이 끝났음을 나타냄
 - 자바스크립트에서는 생략 가능하지만 한 줄에 여러 구문을 사용하고 싶을 때 세미콜론이 유용
 
-`var a = 1;
+```java
+var a = 1;
 alert(a+1);  //2
  
 var a = 2;
-alert(a+1);  //3`
+alert(a+1);  //3
+```
 
 ### 변수 (2/2)
