--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -12,41 +12,63 @@ alert(1);
 ```
 - 경고창 1 뜸 (정수)
 
-`alert(1.1);`
+```java
+alert(1.1);
+```
 - 경고창 1.1 뜸 (소수점)
 
-`alert(1.2 + 1.3);` 
+```java
+alert(1.2 + 1.3);
+```
 - 경고창 2.5 뜸
   
-`alert(2 * 5);`
+```java
+alert(2 * 5);
+```
 - 경고창 10 뜸
   
-`alert(6 / 2);`
+```java
+alert(6 / 2);
+```
 - 경고창 3 뜸
   
-`console.log(1);`
+```java
+console.log(1);
+```
 - 콘솔창에 1 뜸
 
 ---
 
 ### 숫자와 문자 (2/4)
 
-`Math.pow(3,2);` 
+```java
+Math.pow(3,2);
+```
 - 3의 2승
   
-`Math.round(10.6);`
+```java
+Math.round(10.6);
+```
 - 10.6의 반올림 11
   
-`Math.ceil(10.2);` 
+```java
+Math.ceil(10.2);
+```
 - 10.2의 올림 11
   
-`Math.floor(10.6);` 
+```java
+Math.floor(10.6);
+```
 - 10.6의 내림 10
   
-`Math.sqrt(9);` 
+```java
+Math.sqrt(9);
+```
 - 루트9인 3
   
-`Math.random();`
+```java
+Math.random();
+```
 - 0부터 1.0 사이의 랜덤한 숫자
 
 ---
