Update 1. 숫자와 문자.md

--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -77,7 +77,9 @@ Math.random();
 
 - 문자는 "(큰 따옴표) 혹은 '(작은 따옴표) 중의 하나로 감싸야 함
 - 큰, 작은 따옴표 둘 다 문자열 (c랑 다름)
-- `alert("coding everybody");`
+- ```java
+  alert("coding everybody");
+  ```
 - `alert('coding everybody');`
 - `alert("hello world'");` => 가능
 - `alert('hello world"');` => 가능
