Update 1. 숫자와 문자.md

--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -80,9 +80,15 @@ Math.random();
 - ```java
   alert("coding everybody");
   ```
-- `alert('coding everybody');`
-- `alert("hello world'");` => 가능
-- `alert('hello world"');` => 가능
+- ```java
+  alert('coding everybody');
+  ```
+- ```java
+  alert("hello world'");
+  ``` => 가능
+- ```java
+  alert('hello world"');
+  ``` => 가능
 </br>
 
 `alert(typeof "1")` 
