--- a/자바스크립트/1. 숫자와 문자.md
+++ b/자바스크립트/1. 숫자와 문자.md
@@ -91,34 +91,56 @@ Math.random();
   alert('hello world"');
   ```
   => 가능
+  
 </br>
 
-`alert(typeof "1")` 
+```java
+alert(typeof "1")
+```
 - 문자이므로 string 출력
   
-`alert(typeof 1)` 
+```java
+alert(typeof 1)
+```
 - 숫자이므로 number 출력
 </br>
 
 문자열 안에 작은 따옴표나 큰따옴표를 넣는 방법
-- `alert('egoing's javascript')` => 불가능
-- `alert('egoing\'s javascript')` => 가능! \ 넣기 (이스케이프 기법) 
+- ```java
+  alert('egoing's javascript')
+  ```
+   => 불가능
+- ```java
+  alert('egoing\'s javascript')
+  ```
+   => 가능! \ 넣기 (이스케이프 기법) 
 
 ---
 
 ### 숫자와 문자 (4/4)
 
 - 여러 줄 표시할 때 줄바꿈 \n 사용
-- `alert("안녕하세요.\n생활코딩의 세계에 오신 것을 환영합니다");`
+- ```java
+  alert("안녕하세요.\n생활코딩의 세계에 오신 것을 환영합니다");
+  ```
 </br>
 
-- `alert("coding"+" everybody");` => 문자열끼리 더함. coding everybody 출력
-- `alert("coding everybody".length);` => 문자열 길이 출력. 16 출력
+- ```java
+  alert("coding"+" everybody");
+  ```
+   => 문자열끼리 더함. coding everybody 출력
+- ```java
+  alert("coding everybody".length);
+  ```
+   => 문자열 길이 출력. 16 출력
 </br>
 
 - `1 + 1 => 2` (숫자끼리)
 - `“1” + “1” => “11”` (문자열끼리)
 </br>
 
-`"code".indexOf("e");` => e의 인덱스 번호 3 출력
+```java
+"code".indexOf("e");
+```
+ => e의 인덱스 번호 3 출력
 
