--- a/자바스크립트/2. 변수.md
+++ b/자바스크립트/2. 변수.md
@@ -20,4 +20,10 @@ var first = "coding";
 alert(first+" everybody");
 ```
 
+```java
+var a = 'coding', b = 'everybody';
+alert(a);
+alert(b);
+```
+
 ### 변수 (2/2)
