--- a/자바스크립트/2. 변수.md
+++ b/자바스크립트/2. 변수.md
@@ -26,4 +26,28 @@ alert(a);
 alert(b);
 ```
 
+---
+
 ### 변수 (2/2)
+- 변수는 코드의 재활용성을 높여줌
+
+```java
+alert(100+10);
+alert((100+10)/10);
+alert(((100+10)/10)-10);
+alert((((100+10)/10)-10)*10);
+```
+- 100 수정 시 각 단계의 100을 하나하나 수정해야 함
+
+```java
+a = 100;
+a = a + 10;
+alert(a);
+a = a / 10;
+alert(a);
+a = a - 10;
+alert(a);
+a = a * 10;      
+alert(a);
+```
+- a만 수정하면 됨
