--- a/자바스크립트/2. 변수.md
+++ b/자바스크립트/2. 변수.md
@@ -41,7 +41,7 @@ alert((((100+10)/10)-10)*10);
 </br>
 
 ```java
-a = 100;
+a = 100;  //변할 수 있는 영역
 a = a + 10;
 alert(a);
 a = a / 10;
@@ -52,3 +52,4 @@ a = a * 10;
 alert(a);
 ```
 - a만 수정하면 됨
+- 변할 수 있는 부분이 중간중간 들어갈 경우 => 유지보수가 어려운 코드
