--- a/자바스크립트/2. 변수.md
+++ b/자바스크립트/2. 변수.md
@@ -5,7 +5,8 @@
 - var 생략 가능 but 유효범위에 영향을 미침
 - //은 주석
 - 세미콜론(;)은 하나의 구문이 끝났음을 나타냄
-- 자바스크립트에서는 생략 가능하지만 한 줄에 여러 구문을 사용하고 싶을 때 세미콜론이 유용
+- 자바스크립트에서는 생략 가능(줄이 바뀌면 명령이 끝났다고 간주)
+- 한 줄에 여러 구문을 사용하고 싶을 때 세미콜론이 유용
 
 ```java
 var a = 1;
