--- a/자바스크립트/3. 비교.md
+++ b/자바스크립트/3. 비교.md
@@ -1,1 +1,16 @@
+# 비교
 
+### 비교 (1/4)
+- 아래 =는 대입 연산자
+```java
+a=1
+```
+- 비교 연산자의 결과는 true나 false 중의 하나(boolean)
+
+```java
+alert(1==2)             //false
+alert(1==1)             //true
+alert("one"=="two")     //false 
+```
+
+---
