--- a/자바스크립트/3. 비교.md
+++ b/자바스크립트/3. 비교.md
@@ -16,4 +16,12 @@ alert("one"=="two")     //false
 ---
 
 ### 비교 (2/4)
+
 ### ==
+- 서로 값이 같다면 true 다르다면 false
+```java
+alert(1==2)             //false
+alert(1==1)             //true
+alert("one"=="two")     //false 
+alert("one"=="one")     //true
+```
