--- a/자바스크립트/3. 비교.md
+++ b/자바스크립트/3. 비교.md
@@ -26,3 +26,11 @@ alert(1==1)             //true
 alert("one"=="two")     //false 
 alert("one"=="one")     //true
 ```
+
+### ===
+- 일치 연산자로 값이 정확하게 같을 때 true 다르면 false
+- 서로 같은 수를 표현하고 있더라도 데이터 형이 같은 경우에만 같다고 판단
+```java
+alert(1=='1');              //true
+alert(1==='1');             //false
+```
