--- a/자바스크립트/3. 비교.md
+++ b/자바스크립트/3. 비교.md
@@ -38,7 +38,7 @@ alert(1==='1');             //false
 
 ### 비교 (3/4)
 - null은 값이 없음을 명시적으로 표시한 것이고, undefined는 값이 정의되어 있지 않은 것
-- NaN은 0/0과 같은 연산의 결과로 만들어지는 특수한 데이터 형. 숫자가 아니라는 뜻.
+- NaN은 0/0과 같은 연산의 결과로 만들어지는 특수한 데이터 형(숫자 x)
 ```java
 alert(null == undefined);       //true
 alert(null === undefined);      //false
