--- a/자바스크립트/3. 비교.md
+++ b/자바스크립트/3. 비교.md
@@ -54,3 +54,31 @@ alert(NaN === NaN);             //false
 ---
 
 ### 비교 (4/4)
+
+### !=
+- ! 는 부정을 의미 (같지 않다)
+```java
+alert(1!=2);            //true
+alert(1!=1);            //false
+alert("one"!="two");    //true
+alert("one"!="one");    //false
+```
+
+### !==
+- 정확하게 같지 않다는 의미
+
+### >
+- 좌항이 우항보다 크다면 참, 그렇지 않다면 거짓
+```java
+alert(10>20);   //false
+alert(10>1);    //true
+alert(10>10);   //false
+```
+
+### >=
+- 좌항이 우항보다 크거나 같음
+```java
+alert(10>=20);      //false
+alert(10>=1);       //true
+alert(10>=10);      //true
+```
