--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -1,2 +1,13 @@
 # 조건문
 ### 조건문 (1/5)
+- Boolean(불린): true와 false
+
+### if
+- if 뒤의 괄호에 조건이 오고, 조건이 될 수 있는 값은 Boolean
+
+```java
+if(true){
+    alert('result : true');
+}
+```
+- result : true 출력
