--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -11,3 +11,53 @@ if(true){
 }
 ```
 - result : true 출력
+
+```java
+if(false){
+    alert('result : true');
+}
+```
+- 아무것도 출력되지 않음
+
+```java
+if(true){
+    alert(1);
+    alert(2);
+    alert(3);
+    alert(4);
+}
+alert(5);
+```
+- 12345 출력
+
+```java
+if(false){
+    alert(1);
+    alert(2);
+    alert(3);
+    alert(4);
+}
+alert(5);
+```
+- 5만 출력
+
+### else
+- if문의 조건이 true라면 if의 중괄호 구간이 실행되고, false라면 else 이후의 중괄호 구간이 실행
+
+```java
+if(true){
+    alert(1);
+} else {
+    alert(2);
+}
+```
+- 1 출력
+
+```java
+if(false){
+    alert(1);
+} else {
+    alert(2);
+}
+```
+- 2 출력
