--- a/자바스크립트/2. 변수.md
+++ b/자바스크립트/2. 변수.md
@@ -1,6 +1,6 @@
 # 변수
 
-### 변수 (1/2)
+### 변수 (1/2) : 사용법
 - 변수는 var로 시작
 - var 생략 가능 but 유효범위에 영향을 미침
 - //은 주석
@@ -30,7 +30,7 @@ alert(b);
 
 ---
 
-### 변수 (2/2)
+### 변수 (2/2) : 변수의 효용
 - 변수는 코드의 재활용성을 높여줌
 
 ```java
