--- a/자바스크립트/3. 비교.md
+++ b/자바스크립트/3. 비교.md
@@ -1,6 +1,6 @@
 # 비교
 
-### 비교 (1/4)
+### 비교 (1/4) : 연산자란?
 - 아래 =는 대입 연산자
 ```java
 a=1
@@ -15,7 +15,7 @@ alert("one"=="two")     //false
 
 ---
 
-### 비교 (2/4)
+### 비교 (2/4) : ==과 ===
 
 ### ==
 - 서로 값이 같다면 true 다르다면 false
@@ -36,7 +36,7 @@ alert(1==='1');             //false
 
 ---
 
-### 비교 (3/4)
+### 비교 (3/4) : ===를 사용
 - null은 값이 없음을 명시적으로 표시한 것이고, undefined는 값이 정의되어 있지 않은 것
 - NaN은 0/0과 같은 연산의 결과로 만들어지는 특수한 데이터 형 (숫자 x)
 ```java
@@ -53,7 +53,7 @@ alert(NaN === NaN);             //false
 
 ---
 
-### 비교 (4/4)
+### 비교 (4/4) : 부정과 부등호
 
 ### !=
 - ! 는 부정을 의미 (같지 않다)
