--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -1,5 +1,5 @@
 # 조건문
-### 조건문 (1/5)
+### 조건문 (1/5) : 조건문이란?
 - Boolean(불린): true와 false
   
 ### if
@@ -47,7 +47,7 @@ alert(5);
 
 ---
 
-### 조건문 (2/5)
+### 조건문 (2/5) : else, else if
 
 ### else
 - if문의 조건이 true라면 if의 중괄호 구간이 실행되고, false라면 else 이후의 중괄호 구간이 실행
