--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -70,7 +70,50 @@ if(false){
 ```
 - 2 출력
 
+### else if
+- else if는 if나 else와는 다르게 여러 개가 올 수 있음
+- else if의 모든 조건이 false라면 else가 실행
+- else는 생략 가능
 
+```java
+if(false){
+    alert(1);
+} else if(true){
+    alert(2);
+} else if(true){
+    alert(3);
+} else {
+    alert(4);
+}
+```
+- 2 출력
+
+```java
+if(false){
+    alert(1);
+} else if(false){
+    alert(2);
+} else if(true){
+    alert(3);
+} else {
+    alert(4);
+}
+```
+- 3 출력
+
+```java
+if(false){
+    alert(1);
+} else if(false){
+    alert(2);
+} else if(false){
+    alert(3);
+} else {
+    alert(4);
+}
+```
+- 4 출력
+  
 ---
 
 ### 조건문 (3/5)
