--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -173,7 +173,28 @@ if(false){
 
 ---
 
-### 조건문 (4/5)
+### 조건문 (4/5) : 논리연산자
+
+### &&
+- 좌항과 우항이 모두 참(true)일 때 참 
+- 이러한 논리 연산자를 and 연산자라고 함
+
+</br>
+
+```java
+if(true && true){
+    alert(1);
+}
+if(true && false){
+    alert(2);
+}
+if(false && true){
+    alert(3);
+}
+if(false && false){
+    alert(4);
+}
+```
 
 ---
 
