--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -198,6 +198,30 @@ if(false && false){
     alert(4);
 }
 ```
+- 1 출력
+
+```java
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8"/>
+</head>
+<body>
+    <script>
+        id = prompt('아이디를 입력해주세요.');
+        password = prompt('비밀번호를 입력해주세요.');
+        if(id=='egoing' && password=='111111'){
+            alert('인증 했습니다.');
+        } else {
+            alert('인증에 실패 했습니다.');
+        }
+    </script>
+</body>
+</html>
+```
+- 중첩된 if문을 하나로 줄임 
+- id의 값이 egoing이고 password의 값이 111111이면 참
+
 
 ---
 
