--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -222,7 +222,27 @@ if(false && false){
 ```
 - 중첩된 if문을 하나로 줄임 
 - id의 값이 egoing이고 password의 값이 111111이면 참
+</br>
 
+### ||
+- 좌우 항 중에 하나라도 참이라면 참 
+</br>
+
+```java
+if(true || true){
+    alert(1);
+}
+if(true || false){
+    alert(2);
+}
+if(false || true){
+    alert(3);
+}
+if(false || false){
+    alert(4);
+}
+```
+- 1,2,3이 출력
 
 ---
 
