--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -246,6 +246,30 @@ if(false || false){
 }
 ```
 - 1,2,3이 출력
+</br>
+
+```java
+id = prompt('아이디를 입력해주세요.');
+if(id==='egoing' || id==='k8805' || id==='sorialgi'){
+    alert('인증 했습니다.');
+} else {
+    alert('인증에 실패 했습니다.');
+}
+```
+- id 값으로 egoing, k8805, sorialgi 중의 하나를 입력하면 '인증 했습니다.'가 출력되고, 그 외의 값을 입력하면 '인증에 실패 했습니다.'를 출력
+</br>
+
+```java
+id = prompt('아이디를 입력해주세요.');
+password = prompt('비밀번호를 입력해주세요.');
+if((id==='egoing' || id==='k8805' || id==='sorialgi') && password==='111111'){
+    alert('인증 했습니다.');
+} else {
+    alert('인증에 실패 했습니다.');
+}
+```
+- id 값으로 egoing, k8805, sorialgi 중의 하나를 사용하고 비밀번호는 111111을 입력하면 right, 이외의 경우에는 wrong를 출력
+
 
 ---
 
