--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -274,8 +274,29 @@ if((id==='egoing' || id==='k8805' || id==='sorialgi') && password==='111111'){
 1.	(id=="egoing" or id=="k8805" or id=="sorialgi") : true가 된다.
 2.	password=='111111' : true가 된다.
 3.	true(1항) and true(2항) : true가 된다.
+</br>
 
+### !
+- ! 는 부정의 의미로, true를 false로 false를 true로 만듦
+- not 연산자라고 부름
+</br>
 
+```java
+if(!true && !true){
+    alert(1);
+}
+if(!false && !true){
+    alert(2);
+}
+if(!true && !false){
+    alert(3);
+}
+if(!false && !false){
+    alert(4);
+}
+```
+- 4 출력
+  
 ---
 
 ### 조건문 (5/5)
