--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -299,4 +299,18 @@ if(!false && !false){
   
 ---
 
-### 조건문 (5/5)
+### 조건문 (5/5) : boolean의 대체재
+</br>
+
+### 0과 1
+- 0는 false 0이 아닌 값은 true로 간주
+
+```java
+if(0){
+    alert(1)
+}
+if(1){
+    alert(2)
+}
+```
+- 2 출력
