--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -314,3 +314,26 @@ if(1){
 }
 ```
 - 2 출력
+</br>
+
+### 기타 false로 간주되는 데이터 형
+- false와 0 외에 false로 간주되는 데이터형의 리스트
+
+```java
+if(!''){
+    alert('빈 문자열')
+}
+if(!undefined){
+    alert('undefined');
+}
+var a;
+if(!a){
+    alert('값이 할당되지 않은 변수'); 
+}
+if(!null){
+    alert('null');
+}
+if(!NaN){
+    alert('NaN');
+}
+```
