--- a/자바스크립트/4. 조건문.md
+++ b/자바스크립트/4. 조건문.md
@@ -321,19 +321,19 @@ if(1){
 
 ```java
 if(!''){
-    alert('빈 문자열')
+    alert('빈 문자열')    // `빈 문자열` 출력
 }
 if(!undefined){
-    alert('undefined');
+    alert('undefined');    // `undefined` 출력
 }
 var a;
 if(!a){
-    alert('값이 할당되지 않은 변수'); 
+    alert('값이 할당되지 않은 변수');     // `값이 할당되지 않은 변수` 출력
 }
 if(!null){
-    alert('null');
+    alert('null');    // `null` 출력
 }
 if(!NaN){
-    alert('NaN');
+    alert('NaN');    // `NaN` 출력
 }
 ```
