--- a/자바스크립트/5. 반복문.md
+++ b/자바스크립트/5. 반복문.md
@@ -8,3 +8,11 @@ while (조건){
     반복해서 실행할 코드
 }
 ```
+
+```java
+while(true){
+    document.write('coding everybody <br />');
+}
+```
+- 'coding everybody’ 무한대로 출력
+- 줄 바꿈 시 <br/> 사용
