--- a/자바스크립트/5. 반복문.md
+++ b/자바스크립트/5. 반복문.md
@@ -16,3 +16,27 @@ while(true){
 ```
 - 'coding everybody’ 무한대로 출력
 - 줄 바꿈 시 <br/> 사용
+
+```java
+while(false){
+    document.write('coding everybody <br />');
+}
+```
+- 출력되지 않음
+</br>
+
+### 반복문 (2/6) : 반복조건
+</br>
+
+### 반복조건
+```java
+var i = 0;
+// 종료조건으로 i의 값이 10보다 작다면 true, 같거나 크다면 false가 된다.
+while(i < 10){
+    // 반복이 실행될 때마다 coding everybody <br />이 출력된다. <br /> 줄바꿈을 의미하는 HTML 태그
+    document.write('coding everybody <br />');
+    // i의 값이 1씩 증가한다.
+    i++
+}
+```
+- coding everybody이 10번 출력
