--- a/자바스크립트/5. 반복문.md
+++ b/자바스크립트/5. 반복문.md
@@ -43,3 +43,54 @@ while(i < 10){
 }
 ```
 - coding everybody이 10번 출력
+</br>
+
+---
+
+### 반복문 (3/6) : for문
+</br>
+
+### for
+```java
+for(초기화; 반복조건; 반복이 될 때마다 실행되는 코드){
+    반복해서 실행될 코드
+}
+```
+</br>
+
+```java
+for(var i = 0; i < 10; i++){
+    document.write('coding everybody'+i+'<br />');
+}
+```
+- 'coding everybody + i 가 10번 출력
+</br>
+
+---
+
+### 반복문 (4/6) : 반복문의 효용
+</br>
+
+### < case 1 >
+```java
+document.write('coding everybody');
+document.write('coding everybody');
+document.write('coding everybody');
+document.write('coding everybody');
+document.write('coding everybody');
+document.write('coding everybody');
+document.write('coding everybody');
+document.write('coding everybody');
+document.write('coding everybody');
+document.write('coding everybody');
+document.write('coding everybody');
+```
+- 비효율적 코드
+```java
+var i = 0;
+while(i < 10){
+    document.write('coding everybody <br />');
+    i++;
+}
+```
+- 효율적 코드
