--- a/자바스크립트/5. 반복문.md
+++ b/자바스크립트/5. 반복문.md
@@ -94,3 +94,32 @@ while(i < 10){
 }
 ```
 - 효율적 코드
+</br>
+
+### < case 2 >
+```java
+document.write('coding everybody 1<br />')
+document.write('coding everybody 2<br />')
+//중략
+document.write('coding everybody 9<br />')
+document.write('coding everybody 10<br />')
+```
+- 비효율적 코드
+```java
+var i = 0;
+while(i < 10){
+    document.write('coding everybody '+i+'<br />');
+    i++;
+}
+```
+- 효율적 코드
+</br>
+
+```java
+var i = 0;
+while(i < 10){
+    document.write('coding everybody '+(i*2)+'<br />');
+    i++;
+}
+```
+- coding everybody 뒤에 붙는 숫자를 2의 배수로 변경
