--- a/자바스크립트/5. 반복문.md
+++ b/자바스크립트/5. 반복문.md
@@ -123,3 +123,73 @@ while(i < 10){
 }
 ```
 - coding everybody 뒤에 붙는 숫자를 2의 배수로 변경
+</br>
+
+---
+
+### 반복문 (5/6) : 반복문의 제어 (break, continue)
+</br>
+
+### break
+- 반복을 중간에 중단시키고 싶을 때 사용
+```java
+for(var i = 0; i < 10; i++){
+    if(i === 5) {
+        break;
+    }
+    document.write('coding everybody'+i+'<br />');
+}
+```
+
+```java
+coding everybody 0
+coding everybody 1
+coding everybody 2
+coding everybody 3
+coding everybody 4
+```
+</br>
+
+### continue
+- 실행은 즉시 중단, 반복은 지속할 때 사용
+```java
+for(var i = 0; i < 10; i++){
+    if(i === 5) {
+        continue;
+    }
+    document.write('coding everybody'+i+'<br />');
+}
+```
+
+```java
+coding everybody 0
+coding everybody 1
+coding everybody 2
+coding everybody 3
+coding everybody 4
+coding everybody 6
+coding everybody 7
+coding everybody 8
+coding everybody 9
+```
+</br>
+
+---
+
+### 반복문 (6/6) : 반복문의 중첩
+</br>
+
+### 중첩 반복문 
+```java
+// 0부터 9까지 변수 i에 순차적으로 값을 할당        
+for(var i = 0; i < 10; i++){
+    // 0부터 9까지의 변수를 j의 값에 순차적으로 할당
+    for(var j = 0; j < 10; j++){    
+        // i와 j의 값을 더한 후에 출력
+        // String은 숫자인 i와 j의 데이터 타입을 문자로 형태를 변환하는 명령이다. 
+        // String()을 제거하고 실행해보면 의미가 좀 더 분명하게 드러날 것이다.
+        document.write(String(i)+String(j)+'<br />');
+    }
+}
+```
+- document.write('coding everybody'+i+j+'<br />'); 일 경우 문자가 앞 뒤로 껴있어서 i, j 문자열로 인식
