--- a/자바스크립트/6. 함수.md
+++ b/자바스크립트/6. 함수.md
@@ -1,1 +1,79 @@
+# 함수
+### 함수 (1/5) : 함수란?
+</br>
 
+### 함수
+```java
+function 함수명( [인자...[,인자]] ){
+   코드
+   return 반환값
+}
+```
+- function + 함수 이름 + 소괄호
+</br>
+
+```java
+function numbering(){
+    i = 0;
+    while(i < 10){
+        document.write(i);
+        i += 1;
+    }   
+}
+numbering()
+```
+- 0123456789 출력
+</br>
+
+---
+
+### 함수 (2/5) : 함수의 효용
+```java
+var i = 0;
+while(i < 10){
+    document.write(i);
+    i += 1;
+}
+ 
+var i = 0;
+while(i < 10){
+    document.write(i);
+    i += 1;
+}
+ 
+var i = 0;
+while(i < 10){
+    document.write(i);
+    i += 1;
+}
+ 
+var i = 0;
+while(i < 10){
+    document.write(i);
+    i += 1;
+}
+ 
+var i = 0;
+while(i < 10){
+    document.write(i);
+    i += 1;
+}
+
+```
+- 비효율적 코드
+```java
+function numbering(){
+    var i = 0;
+    while(i < 10){
+        document.write(i);
+        i += 1;
+    }   
+}
+ 
+numbering();
+numbering();
+numbering();
+numbering();
+numbering();
+```
+- 효율적 코드. 함수를 이용해 반복문 선언을 줄임.
