--- a/자바스크립트/6. 함수.md
+++ b/자바스크립트/6. 함수.md
@@ -80,3 +80,27 @@ numbering();
 numbering();
 ```
 - 효율적 코드. 함수를 이용해 반복문 선언을 줄임.
+</br>
+
+---
+
+### 함수 (3/5) : 입력
+</br>
+
+### return
+- return 뒤에 따라오는 값을 함수의 결과로 반환. 동시에 함수를 종료시킴
+```java
+function get_member1(){
+    return 'egoing';
+}
+ 
+function get_member2(){
+    return 'k8805';
+}
+ 
+alert(get_member1());
+alert(get_member2());
+```
+- egoing과 k8805 출력
+
+
