--- a/자바스크립트/6. 함수.md
+++ b/자바스크립트/6. 함수.md
@@ -89,6 +89,8 @@ numbering();
 
 ### return
 - return 뒤에 따라오는 값을 함수의 결과로 반환. 동시에 함수를 종료시킴
+</br>
+
 ```java
 function get_member1(){
     return 'egoing';
@@ -102,5 +104,45 @@ alert(get_member1());
 alert(get_member2());
 ```
 - egoing과 k8805 출력
+</br>
 
+```java
+function get_member(){
+    return 'egoing';
+    return 'k8805';
+    return 'sorialgi';
+}
+alert(get_member());
+```
+- egoing 출력
+</br>
 
+---
+
+### 함수 (4/5) : 출력
+</br>
+
+### 인자
+- 함수로 유입되는 입력 값
+</br>
+
+```java
+function get_argument(arg){
+    return arg;
+}
+ 
+alert(get_argument(1));
+alert(get_argument(2));
+```
+- 1, 2 출력
+
+### 복수의 인자 
+```java
+function get_arguments(arg1, arg2){
+    return arg1 + arg2
+}
+ 
+alert(get_arguments(10, 20));
+alert(get_arguments(20, 30));
+```
+- 30, 50 출력
