--- a/자바스크립트/6. 함수.md
+++ b/자바스크립트/6. 함수.md
@@ -147,3 +147,21 @@ alert(get_arguments(10, 20));
 alert(get_arguments(20, 30));
 ```
 - 30, 50 출력
+</br>
+
+---
+
+### 함수 (5/5) : 다양한 정의 방법
+</br>
+
+### 함수를 정의하는 또 다른 방법
+```java
+var numbering = function (){
+    i = 0;
+    while(i < 10){
+        document.write(i);
+        i += 1;
+    }   
+}
+numbering();
+```
