--- a/자바스크립트/6. 함수.md
+++ b/자바스크립트/6. 함수.md
@@ -10,7 +10,6 @@ function 함수명( [인자...[,인자]] ){
 }
 ```
 - function + 함수 이름 + 소괄호
-- 함수는 재사용성이 좋음
 </br>
 
 ```java
@@ -29,6 +28,9 @@ numbering()
 ---
 
 ### 함수 (2/5) : 함수의 효용
+- 함수는 재사용성이 좋음
+- 유지보수의 용이
+- 코드의 가독성이 좋아짐
 </br>
 
 ### < case 1 >
