--- a/자바스크립트/6. 함수.md
+++ b/자바스크립트/6. 함수.md
@@ -170,3 +170,13 @@ var numbering = function (){
 }
 numbering();
 ```
+```java
+(function (){
+    i = 0;
+    while(i < 10){
+        document.write(i);
+        i += 1;
+    }   
+})();
+```
+- 익명 함수. 정의와 호출을 같이 함.
