--- a/자바스크립트/6. 함수.md
+++ b/자바스크립트/6. 함수.md
@@ -161,6 +161,16 @@ alert(get_arguments(20, 30));
 
 ### 함수를 정의하는 또 다른 방법
 ```java
+function numbering (){
+    i = 0;
+    while(i < 10){
+        document.write(i);
+        i += 1;
+    }   
+}
+numbering();
+```
+```java
 var numbering = function (){
     i = 0;
     while(i < 10){
