--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -1,1 +1,28 @@
+# 배열
+### 배열 (1/5) : 배열의 문법
+</br>
 
+### 배열
+- 여러 개의 데이터를 하나의 변수에 저장하기 위한 것
+- 각각의 데이터를 원소라고 함
+- 인덱스는 0부터 시작
+</br>
+
+```java
+var name = 'egoing'
+alert(name);
+```
+- 변수
+```java
+var member = ['egoing', 'k8805', 'sorialgi']
+```
+- 배열
+</br>
+
+```java
+var member = ['egoing', 'k8805', 'sorialgi']
+alert(member[0]);
+alert(member[1]);
+alert(member[2]);
+```
+- egoing, k8805, sorialgi 출력
