--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -26,3 +26,39 @@ alert(member[1]);
 alert(member[2]);
 ```
 - egoing, k8805, sorialgi 출력
+</br>
+
+---
+
+### 배열 (2/5) : 배열의 효용
+</br>
+
+```java
+function get_member1(){
+    return 'egoing';
+}
+document.write(get_member1());
+ 
+function get_member2(){
+    return 'k8805';
+}
+document.write(get_member2());
+ 
+ 
+function get_member3(){
+    return 'sorialgi'
+}
+document.write(get_member3());
+```
+- 비효율적 코드
+
+```java
+function get_members(){
+    return ['egoing', 'k8805', 'sorialgi'];
+}
+var members = get_members();
+document.write(members[0]);
+document.write(members[1]);
+document.write(members[2]);
+```
+- 효율적 코드
