--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -62,3 +62,24 @@ document.write(members[1]);
 document.write(members[2]);
 ```
 - 효율적 코드
+</br>
+
+---
+
+### 배열 (3/5) : 배열과 반복문의 조우
+</br>
+
+### 반복문과 배열의 결합
+```java
+function get_members(){
+    return ['egoing', 'k8805', 'sorialgi'];
+}
+members = get_members();
+// members.length는 배열에 담긴 값의 숫자를 알려준다. 
+for(i = 0; i < members.length; i++){
+    // members[i].toUpperCase()는 members[i]에 담긴 문자를 대문자로 변환해준다.
+    document.write(members[i].toUpperCase());   
+    document.write('<br />');
+}
+```
+- egoing, k8805, sorialgi 출력
