--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -82,4 +82,10 @@ for(i = 0; i < members.length; i++){
     document.write('<br />');
 }
 ```
-- egoing, k8805, sorialgi 출력
+-
+```
+EGOING
+K8805
+SORIALGI
+```
+출력
