--- a/자바스크립트/5. 반복문.md
+++ b/자바스크립트/5. 반복문.md
@@ -177,14 +177,14 @@ coding everybody 9
 </br>
 
 ### 중첩 반복문 
-```java
-// 0부터 9까지 변수 i에 순차적으로 값을 할당        
-for(var i = 0; i < 10; i++){
-    // 0부터 9까지의 변수를 j의 값에 순차적으로 할당
-    for(var j = 0; j < 10; j++){    
+```java    
+for(var i = 0; i < 10; i++){            // 0부터 9까지 변수 i에 순차적으로 값을 할당    
+    for(var j = 0; j < 10; j++){        // 0부터 9까지의 변수를 j의 값에 순차적으로 할당
+
         // i와 j의 값을 더한 후에 출력
         // String은 숫자인 i와 j의 데이터 타입을 문자로 형태를 변환하는 명령이다. 
         // String()을 제거하고 실행해보면 의미가 좀 더 분명하게 드러날 것이다.
+
         document.write(String(i)+String(j)+'<br />');
     }
 }
