--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -103,4 +103,23 @@ alert(arr.length);
 
 ### < 배열에 원소 추가하기 >
 ### push
-- 배열의 끝에 원소를 추가하는 방법
+- 배열의 끝에 한 개 이상의 원소를 추가
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.push('f');
+alert(li);
+```
+- a, b, c, d, e, f 출력 (한 번에)
+</br>
+
+### concat
+- 복수의 원소를 배열에 추가하는 방법
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li = li.concat(['f', 'g']);
+alert(li);
+```
+- a, b, c, d, e, f, g 출력 (한 번에)
+</br>
+
+
