--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -113,13 +113,21 @@ alert(li);
 </br>
 
 ### concat
-- 복수의 원소를 배열에 추가하는 방법
+- 두 개 이상의 배열을 합침
 ```java
 var li = ['a', 'b', 'c', 'd', 'e'];
 li = li.concat(['f', 'g']);
 alert(li);
 ```
 - a, b, c, d, e, f, g 출력 (한 번에)
+
+```java
+var arr1 = [1, 2];
+var arr2 = [3, 4];
+arr1=arr1.concat(arr2);
+alert(arr1);
+```
+- 1, 2, 3, 4 출력 (한 번에)
 </br>
 
 
