--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -110,6 +110,13 @@ li.push('f');
 alert(li);
 ```
 - a, b, c, d, e, f 출력 (한 번에)
+
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.push('a', 'f');
+alert(li);
+```
+- a, b, c, d, e, a, f 출력 (한 번에)
 </br>
 
 ### concat
@@ -130,4 +137,18 @@ alert(arr1);
 - 1, 2, 3, 4 출력 (한 번에)
 </br>
 
+### unshift
+- 배열의 시작점에 한 개 이상의 원소를 추가
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.unshift('z');
+alert(li);
+```
+- z, a, b, c, d, e 출력 (한 번에)
 
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.unshift('a', 'z');
+alert(li);
+```
+- a, z, a, b, c, d, e 출력 (한 번에)
