--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -160,4 +160,19 @@ array.splice(startIndex, deleteCount, item1, item2, ...);
 ```
 - startIndex: 변경을 시작할 배열 인덱스 (0부터 시작)
 - deleteCount: 삭제할 요소 개수 (0이면 삭제 안 함)
-- item1, item2, ...: 삭제 후 그 위치에 추가할 요소들 (생략 가능)
+- item1, item2, ...: 삭제 후 그 위치에 추가할 요소들 (생략 가능
+</br>
+
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.splice(2, 0, 'B');
+alert(li);
+```
+- a, b, B, c, d, e 출력 (삭제 요소 0, 인덱스 2부터 B 추가)
+
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.splice(2, 3, 'B', 'C');
+alert(li);
+```
+- a, b, B, C 출력 (삭제 요소 3, 인덱스 2부터 B, C 추가)
