--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -155,7 +155,7 @@ alert(li);
 </br>
 
 ### splice
-`array.splice(startIndex, deleteCount, item1, item2, ...);`
+- `array.splice(startIndex, deleteCount, item1, item2, ...);`
 - startIndex: 변경을 시작할 배열 인덱스 (0부터 시작)
 - deleteCount: 삭제할 요소 개수 (0이면 삭제 안 함)
 - item1, item2, ...: 삭제 후 그 위치에 추가할 요소들 (생략 가능
