--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -166,11 +166,19 @@ var li = ['a', 'b', 'c', 'd', 'e'];
 li.splice(2, 0, 'B');
 alert(li);
 ```
-- a, b, B, c, d, e 출력 (삭제 요소 0, 인덱스 2부터 B 추가)
+- a, b, B, c, d, e 출력 (삭제 요소 0, 인덱스 2부터 B 추가) (한 번에)
 
 ```java
 var li = ['a', 'b', 'c', 'd', 'e'];
 li.splice(2, 3, 'B', 'C');
 alert(li);
 ```
-- a, b, B, C 출력 (삭제 요소 3, 인덱스 2부터 B, C 추가)
+- a, b, B, C 출력 (삭제 요소 3, 인덱스 2부터 B, C 추가) (한 번에)
+</br>
+
+---
+
+### 배열 (5/5) : 제거와 정렬
+</br>
+
+### < 배열에 원소 추가하기 >
