--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -176,9 +176,32 @@ alert(li);
 - a, b, B, C 출력 (삭제 요소 3, 인덱스 2부터 B, C 추가) (한 번에)
 </br>
 
+```java
+var numbers = [1,2,3,4,5,6,7,8,9,10];
+alert(numbers.splice(2)); // array, [3,4,5,6,7,8,9,10], 시작점 2부터 배열의 마지막 원소까지를 대상으로 한다.
+alert(numbers); // array, [1,2], 원본이 수정된다.
+```
+- 출력
+```java
+3,4,5,6,7,8,9,10
+1,2
+```
+
 ---
 
 ### 배열 (5/5) : 제거와 정렬
 </br>
 
-### < 배열에 원소 추가하기 >
+### < 배열에 원소 제거하기 >
+### shift
+- 배열의 첫 번째 원소 제거
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.shift();
+alert(li);
+```
+- b, c, d, e 출력 (한 번에)
+</br>
+
+### pop
+- 배열의 마지막 원소 제거
