--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -80,7 +80,7 @@ for(i = 0; i < members.length; i++){                 // members.length는 배열
     document.write('<br />');
 }
 ```
-> 출력
+- 출력
 ```
 EGOING
 K8805
@@ -182,23 +182,21 @@ var numbers = [1,2,3,4,5,6,7,8,9,10];
 alert(numbers.splice(2));                     // array, [3,4,5,6,7,8,9,10], 시작점 2부터 배열의 마지막 원소까지를 대상으로 한다.
 alert(numbers);                               // array, [1,2], 원본이 수정된다.
 ```
-> 출력
-```java
-3,4,5,6,7,8,9,10
-1,2
-```
 </br>
 </br>
 
 ```java
 var numbers = [1,2,3,4,5,6,7,8,9,10];
 alert(numbers.splice(2, 4));             // array, [3,4,5,6]
-alert(numbers);
+alert(numbers);                          // array, [1,2,7,8,9,10]
 ```
-> 출력
+</br>
+</br>
+
 ```java
-3,4,5,6
-1,2,7,8,9,10
+var numbers = [1,2,3,4,5,6,7,8,9,10];
+alert(numbers.splice(2, 4, 'three', 'four', 'five', 'six'));         // array, [3,4,5,6]
+alert(numbers);                                                      // array, [1,2,three,four,five,six,7,8,9,10]
 ```
 
 ---
