--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -217,3 +217,28 @@ alert(li);
 
 ### pop
 - 배열의 마지막 원소 제거
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.pop();
+alert(li);
+```
+- a, b, c, d 출력 (한 번에)
+</br>
+
+### < 배열 안 원소 정렬하기 >
+### 정렬
+```java
+var li = ['c', 'e', 'a', 'b', 'd'];
+li.sort();
+alert(li);
+```
+- a, b, c, d, e 출력 (한 번에)
+</br>
+
+### 역정렬
+```java
+var li = ['c', 'e', 'a', 'b', 'd'];
+li.reverse();
+alert(li);
+```
+- e, d, c, b, a 출력 (한 번에)
