--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -1,1 +1,9 @@
 # 객체
+### 객체 (1/3) : 객체의 문법
+</br>
+
+### < 객체의 생성 >
+```java
+var grades = {'egoing': 10, 'k8805': 6, 'sorialgi': 80};
+```
+- egoing은 key, 10은 value
