--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -6,4 +6,4 @@
 ```java
 var grades = {'egoing': 10, 'k8805': 6, 'sorialgi': 80};
 ```
-- egoing은 key, 10은 value
+- egoing은 key(배열에서는 인덱스), 10은 value(배열에서는 값)
