--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -7,3 +7,17 @@
 var grades = {'egoing': 10, 'k8805': 6, 'sorialgi': 80};
 ```
 - egoing은 key(배열에서는 인덱스), 10은 value(배열에서는 값)
+```java
+var grades = {};
+grades['egoing'] = 10;
+grades['k8805'] = 6;
+grades['sorialgi'] = 80;
+```
+
+```java
+var grades = new Object();
+grades['egoing'] = 10;
+grades['k8805'] = 6;
+grades['sorialgi'] = 80;
+```
+- 위와 같은 객체를 만드는 다른 방법
