--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -20,3 +20,14 @@ grades['k8805'] = 6;
 grades['sorialgi'] = 80;
 ```
 - 위와 같은 객체를 만드는 다른 방법
+</br>
+
+```java
+var grades = {'egoing': 10, 'k8805': 6, 'sorialgi': 80};
+alert(grades['sorialgi']);
+```
+- 80 출력
+```java
+alert(grades.sorialgi);
+```
+- 위와 같은 객체의 속성에 접근하는 다른 방법
