--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -29,6 +29,6 @@ alert(grades['sorialgi']);
 - 80 출력
 ```java
 alert(grades.sorialgi);
-alert('sorial'+'gi');
+alert(grades['sorial'+'gi']);
 ```
 - 위와 같은 객체의 속성에 접근하는 다른 방법
