--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -33,3 +33,11 @@ alert(grades.sorialgi);
 alert(grades['sorial'+'gi']);
 ```
 - 위와 같은 객체의 속성에 접근하는 다른 방법
+</br>
+
+---
+
+### 객체 (2/3) : 객체와 반복문의 조우
+</br>
+
+### < 객체와 반복문 >
