--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -41,7 +41,7 @@ alert(grades['sorial'+'gi']);
 </br>
 
 ### < 객체와 반복문 >
-- 'for(key in grades) {}'
+- `for(key in grades) {}`
 - grades 객체의 모든 key를 순회하는 반복문
 ```java
 var grades = {'egoing': 10, 'k8805': 6, 'sorialgi': 80};
