--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -55,3 +55,13 @@ key :   egoing value : 10
 key :   k8805 value : 6
 key :   sorialgi value : 80
 ```
+</br>
+</br>
+
+```java
+var arr = ['a', 'b', 'c'];
+for(var name in arr) {
+    document.write(name);
+}
+```
+- abc 출력 (배열에도 적용 가능)
