--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -70,3 +70,14 @@ for(var name in arr) {
 ---
 
 ### 객체 (3/3) : 객체지향 프로그래밍
+```java
+var grades = {
+    'list': {'egoing': 10, 'k8805': 6, 'sorialgi': 80},
+    'show' : function(){
+        for(var name in this.list){
+            document.write(name+':'+this.list[name]+"<br />");
+        }
+    }
+};
+grades.show();
+```
