--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -74,6 +74,20 @@ for(var name in arr) {
 var grades = {
     'list': {'egoing': 10, 'k8805': 6, 'sorialgi': 80},
     'show' : function(){
+        alert('Hello');
+    }
+};
+alert(grades['list']['egoing']);
+alert(grades['show']());
+```
+- 10, Hello 출력
+</br>
+</br>
+
+```java
+var grades = {
+    'list': {'egoing': 10, 'k8805': 6, 'sorialgi': 80},
+    'show' : function(){
         for(var name in this.list){
             document.write(name+':'+this.list[name]+"<br />");
         }
