--- a/자바스크립트/8. 객체.md
+++ b/자바스크립트/8. 객체.md
@@ -88,10 +88,29 @@ alert(grades['show']());
 var grades = {
     'list': {'egoing': 10, 'k8805': 6, 'sorialgi': 80},
     'show' : function(){
+        alert(this.list.egoing);
+    }
+};
+grades.show();
+```
+- 10 출력
+</br>
+</br>
+
+```java
+var grades = {
+    'list': {'egoing': 10, 'k8805': 6, 'sorialgi': 80},
+    'show' : function(){
         for(var name in this.list){
             document.write(name+':'+this.list[name]+"<br />");
         }
     }
 };
 grades.show();
+```
+- 출력
+```java
+egoing:10
+k8805:6
+sorialgi:80
 ```
