Update 1. SQL 기본 구조.md

--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -1,2 +1,2 @@
-![Uploading image.png…]()
-
+<img src="https://github.com/user-attachments/assets/2e71562c-e8a5-4917-9b7b-9bee85699253" width="500" height="300" />
+<img width="617" height="273" alt="image" src="https://github.com/user-attachments/assets/446f7c0d-ef23-4ca4-bf9f-f70a9b318b21" />
