--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -1,2 +1,7 @@
-<img src="https://github.com/user-attachments/assets/2e71562c-e8a5-4917-9b7b-9bee85699253" width="500" height="300" />
-<img width="617" height="273" alt="image" src="https://github.com/user-attachments/assets/446f7c0d-ef23-4ca4-bf9f-f70a9b318b21" />
+# SQL 기본 구조
+### SQL 및 관계형 데이터베이스 (1/3)
+</br>
+
+### SQL이란?
+- Structured Query Language의 약자이며, 관계형 데이터베이스가 이해할 수 있는 구조화된 질의어
+<img width="562" height="248" alt="image" src="https://github.com/user-attachments/assets/821f4aef-3635-475d-852e-4ab1eb3eea0a" />
