--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -5,3 +5,7 @@
 ### SQL이란?
 - Structured Query Language의 약자이며, 관계형 데이터베이스가 이해할 수 있는 구조화된 질의어
 <img width="562" height="248" alt="image" src="https://github.com/user-attachments/assets/821f4aef-3635-475d-852e-4ab1eb3eea0a" />
+
+### 관계형 데이터베이스(RDB)란?
+- RDB는 Relational DataBase의 약자이며, 행과 열로 구성된 테이블이 다른 테이블과 관계를 맺고 모여 있는 집합체
+<img width="580" height="244" alt="image" src="https://github.com/user-attachments/assets/66d37598-e1e1-49fb-89df-732569d99feb" />
