--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -9,3 +9,11 @@
 ### 관계형 데이터베이스(RDB)란?
 - RDB는 Relational DataBase의 약자이며, 행과 열로 구성된 테이블이 다른 테이블과 관계를 맺고 모여 있는 집합체
 <img width="580" height="244" alt="image" src="https://github.com/user-attachments/assets/66d37598-e1e1-49fb-89df-732569d99feb" />
+
+### 관계형 테이블이란?
+- 관계형 테이블은 관계형 데이터베이스에 저장되는 데이터의 집합이며, 행(row)과열(column)로 구성
+<img width="963" height="227" alt="image" src="https://github.com/user-attachments/assets/1735ed23-2a7c-4ce9-9719-2e35cb2c7f46" />
+
+### 관계형 테이블 간의 관계(Relationship)란?
+- 관계는1:1, 1:N, N:N 세가지 형태로, 테이블 간의 연결이 가능하다는 것을 의미
+<img width="903" height="285" alt="image" src="https://github.com/user-attachments/assets/ce1c4ce7-3f4e-4c6b-bd72-8d2f49aa5f62" />
