--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -17,3 +17,17 @@
 ### 관계형 테이블 간의 관계(Relationship)란?
 - 관계는1:1, 1:N, N:N 세가지 형태로, 테이블 간의 연결이 가능하다는 것을 의미
 <img width="942" height="297" alt="image" src="https://github.com/user-attachments/assets/312a4625-5268-4ecc-a3f3-681a335f8080" />
+
+### SQL 및 관계형 데이터베이스란?
+- SQL은 관계형 데이터베이스에 있는 데이터를 분석하는 언어
+- 관계형 데이터베이스는 테이블이 관계를 맺고 모여 있는 집합체
+<img width="809" height="250" alt="image" src="https://github.com/user-attachments/assets/1ebe66ed-4eaa-4120-b5b7-e4c1f14a185e" />
+</br>
+
+--- 
+
+### MySQL 및 Workbench (2/3)
+### <SQL 실습환경>
+</br>
+
+### MySQL Server 및 Workbench
