Update 1. SQL 기본 구조.md

--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -36,3 +36,6 @@
 </br>
 
 ### MySQL Server 및 Workbench
+- MySQL Server는 오라클에서 관리 및 지원하는 오픈 소스 관계형 데이터베이스
+- Workbench는 MySQL Server를 관리하기 위한 소프트웨어
+<img width="690" height="344" alt="image" src="https://github.com/user-attachments/assets/6f24afab-75be-4e26-9f78-9b898a248a68" />
