--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -1,5 +1,5 @@
 # SQL 기본 구조
-### SQL 및 관계형 데이터베이스 (1/3)
+### SQL 기본 구조 (1/3) : SQL 및 관계형 데이터베이스
 </br>
 
 ### SQL이란?
@@ -31,7 +31,7 @@
 
 --- 
 
-### MySQL 및 Workbench (2/3)
+### SQL 기본 구조 (2/3) : MySQL 및 Workbench 
 ### <SQL 실습환경>
 </br>
 
