--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -2,23 +2,23 @@
 ### SQL 기본 구조 (1/3) : SQL 및 관계형 데이터베이스
 </br>
 
-### SQL이란?
+### <SQL이란?>
 - Structured Query Language의 약자이며, 관계형 데이터베이스가 이해할 수 있는 구조화된 질의어
 <img width="562" height="248" alt="image" src="https://github.com/user-attachments/assets/821f4aef-3635-475d-852e-4ab1eb3eea0a" />
 
-### 관계형 데이터베이스(RDB)란?
+### <관계형 데이터베이스(RDB)란?>
 - RDB는 Relational DataBase의 약자이며, 행과 열로 구성된 테이블이 다른 테이블과 관계를 맺고 모여 있는 집합체
 <img width="580" height="244" alt="image" src="https://github.com/user-attachments/assets/66d37598-e1e1-49fb-89df-732569d99feb" />
 
-### 관계형 테이블이란?
+### <관계형 테이블이란?>
 - 관계형 테이블은 관계형 데이터베이스에 저장되는 데이터의 집합이며, 행(row)과열(column)로 구성
 <img width="963" height="227" alt="image" src="https://github.com/user-attachments/assets/1735ed23-2a7c-4ce9-9719-2e35cb2c7f46" />
 
-### 관계형 테이블 간의 관계(Relationship)란?
+### <관계형 테이블 간의 관계(Relationship)란?>
 - 관계는1:1, 1:N, N:N 세가지 형태로, 테이블 간의 연결이 가능하다는 것을 의미
 <img width="942" height="297" alt="image" src="https://github.com/user-attachments/assets/312a4625-5268-4ecc-a3f3-681a335f8080" />
 
-### SQL 및 관계형 데이터베이스란?
+### <SQL 및 관계형 데이터베이스란?>
 - SQL은 관계형 데이터베이스에 있는 데이터를 분석하는 언어
 - 관계형 데이터베이스는 테이블이 관계를 맺고 모여 있는 집합체
 <img width="809" height="250" alt="image" src="https://github.com/user-attachments/assets/1ebe66ed-4eaa-4120-b5b7-e4c1f14a185e" />
@@ -35,7 +35,7 @@
 ### <SQL 실습환경>
 </br>
 
-### MySQL Server 및 Workbench
+### <MySQL Server 및 Workbench>
 - MySQL Server는 오라클에서 관리 및 지원하는 오픈 소스 관계형 데이터베이스
 - Workbench는 MySQL Server를 관리하기 위한 소프트웨어
 <img width="690" height="344" alt="image" src="https://github.com/user-attachments/assets/6f24afab-75be-4e26-9f78-9b898a248a68" />
