Update 1. SQL 기본 구조.md

--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -43,3 +43,11 @@
 - MySQL Server는 오라클에서 관리 및 지원하는 오픈 소스 관계형 데이터베이스
 - Workbench는 MySQL Server를 관리하기 위한 소프트웨어
 <img width="690" height="344" alt="image" src="https://github.com/user-attachments/assets/6f24afab-75be-4e26-9f78-9b898a248a68" />
+</br>
+
+### SQL 국제표준화
+- SQL은 국제 표준화된 언어이기 때문에, MySQL, MSSQL, Oracle, PostgreSQL 등 데이터베이스 관리시스템 종류에 얽매이지 않고 사용이 가능
+</br>
+</br>
+
+--- 
