Update 1. SQL 기본 구조.md

--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -45,9 +45,21 @@
 <img width="690" height="344" alt="image" src="https://github.com/user-attachments/assets/6f24afab-75be-4e26-9f78-9b898a248a68" />
 </br>
 
-### SQL 국제표준화
+### <SQL 국제표준화>
 - SQL은 국제 표준화된 언어이기 때문에, MySQL, MSSQL, Oracle, PostgreSQL 등 데이터베이스 관리시스템 종류에 얽매이지 않고 사용이 가능
 </br>
 </br>
 
 --- 
+
+### SQL 기본 구조 (3/3) : Workbench 살펴보기
+### <Workbench 화면 구성>
+- Workbench는 데이터베이스 관리, SQL 명령어, 실행 결과 크게 3가지로 구성
+<img width="940" height="516" alt="image" src="https://github.com/user-attachments/assets/257247be-91de-42e8-9d64-1dded826cf2a" />
+</br>
+</br>
+
+- `Ctrl + T` : 새로운 쿼리창 열기
+- `Ctrl + Enter` : 쿼리 실행
+- `Ctrl + S` : 쿼리 저장
+- sql은 대소문자 구분하지 않음
