--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -1,1 +1,26 @@
+# SQL 명령어
+### SQL 명령어 (1/6) : SQL 기본 명령어 
+</br>
 
+### <SQL 기본 명령어 분류>
+- 데이터 정의어(DDL), 데이터 조작어(DML), 데이터 제어어(DCL), 트랜젝션 제어어(TCL) 4가지로 분류
+<img width="876" height="383" alt="image" src="https://github.com/user-attachments/assets/0c71d030-0976-41c7-8789-fab904a99873" />
+
+### <DBA, Data Analyst 역할>
+- DBA(DataBase Administrator) 역할: 데이터베이스 관리자이며, 기업 내에서 데이터베이스를 관리
+- Data Analyst 역할: 데이터 분석을 통해, 새로운 인사이트를 도출
+<img width="940" height="321" alt="image" src="https://github.com/user-attachments/assets/9c1be1ce-cb99-42f6-81f0-ddff18d0d39d" />
+
+</br>
+</br>
+
+</br>
+</br>
+
+---
+
+### SQL 명령어 (2/6) : 데이터 정의어(DDL)
+</br>
+
+### <데이터 정의어(DDL, Data Definition Language)>
+- 테이블을 생성, 변경, 삭제할 때 사용하는 명령어
