Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -28,3 +28,15 @@
 
 ### <데이터 정의어(DDL, Data Definition Language)>
 - 테이블을 생성, 변경, 삭제할 때 사용하는 명령어
+<img width="824" height="275" alt="image" src="https://github.com/user-attachments/assets/39ea8e3b-64bd-40fb-8de9-14fcd489fb9d" />
+
+</br>
+</br>
+
+### <테이블 데이터 타입 및 제약조건>
+- 테이블은 각 열마다 반드시 1가지 데이터 타입으로 정의되어야 함
+- 테이블은 각 열마다 제약조건을 정의할 수 있음
+1. PK(PRIMARY KEY): 중복되어 나타날 수 없는 단일 값. NOT NULL. (NULL: 값이 없는 상태)
+2. NOT NULL: NULL 허용하지 않음
+<img width="434" height="341" alt="image" src="https://github.com/user-attachments/assets/472b2dea-9a5f-482b-8ad2-b6e49c198770" /> <img width="475" height="365" alt="image" src="https://github.com/user-attachments/assets/f2f04f1c-140c-481f-843b-e15698761561" />
+
