Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -38,5 +38,7 @@
 - 테이블은 각 열마다 제약조건을 정의할 수 있음
 1. PK(PRIMARY KEY): 중복되어 나타날 수 없는 단일 값. NOT NULL. (NULL: 값이 없는 상태)
 2. NOT NULL: NULL 허용하지 않음
-<img width="434" height="341" alt="image" src="https://github.com/user-attachments/assets/472b2dea-9a5f-482b-8ad2-b6e49c198770" /> <img width="475" height="365" alt="image" src="https://github.com/user-attachments/assets/f2f04f1c-140c-481f-843b-e15698761561" />
+<img width="434" height="341" alt="image" src="https://github.com/user-attachments/assets/472b2dea-9a5f-482b-8ad2-b6e49c198770" />
+<img width="475" height="365" alt="image" src="https://github.com/user-attachments/assets/7fbd9eeb-dee6-4d84-9bac-2fb57c638efa" />
+
 
