Update 1. SQL 기본 구조.md

--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -67,3 +67,10 @@
 - `Ctrl + Enter` : 쿼리 실행
 - `Ctrl + S` : 쿼리 저장
 - sql은 대소문자 구분하지 않음
+</br>
+
+### 1. CREATE DATABASE
+- 새 데이터베이스를 생성할 때 사용
+```sql
+CREATE DATABASE 데이터베이스명;
+```
