--- a/SQL/1. SQL 기본 구조.md
+++ b/SQL/1. SQL 기본 구조.md
@@ -70,7 +70,33 @@
 </br>
 
 ### 1. CREATE DATABASE
-- 새 데이터베이스를 생성할 때 사용
+- 새 데이터베이스를 생성
 ```sql
 CREATE DATABASE 데이터베이스명;
+```
+</br>
+
+### 2. USE
+- 작업할 데이터베이스를 선택
+```sql
+USE 데이터베이스명;
+```
+</br>
+
+### 3. DROP
+- 데이터 베이스를 삭제
+```sql
+DROP DATABASE 데이터베이스명;
+```
+</br>
+
+```sql
+/*데이터 베이스 생성*/
+CREATE DATABASE TEST;
+
+/*해당 데이터베이스 사용*/
+USE TEST;
+
+/*데이터 베이스 삭제*/
+DROP DATABASE TEST;
 ```
