Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -41,4 +41,11 @@
 <img width="434" height="341" alt="image" src="https://github.com/user-attachments/assets/472b2dea-9a5f-482b-8ad2-b6e49c198770" />
 <img width="475" height="365" alt="image" src="https://github.com/user-attachments/assets/7fbd9eeb-dee6-4d84-9bac-2fb57c638efa" />
 
+</br>
+</br>
+
+</br>
+</br>
+
+### 1. CREATE TABLE
 
