Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -56,3 +56,11 @@ CREATE TABLE 테이블명 (
   ...
 );
 ```
+```sql
+CREATE TABLE 회원테이블 (
+  회원번호 INT PRIMARY KEY,
+  이름 VARCHAR(20),
+  가입일자 DATE NOT NULL,
+  수신동의 BIT
+);
+```
