--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -67,3 +67,9 @@ CREATE TABLE 회원테이블 (
 
 ### 2. SELECT
 - 데이터를 조회
+```sql
+SELECT 컬럼명1, 컬럼명2, ... FROM 테이블명 WHERE 조건;
+```
+```sql
+SELECT * FROM 회원테이블;      // 모든 컬럼(열)을 선택
+```
