--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -71,5 +71,7 @@ CREATE TABLE 회원테이블 (
 SELECT 컬럼명1, 컬럼명2, ... FROM 테이블명 WHERE 조건;
 ```
 ```sql
-SELECT * FROM 회원테이블;      // 모든 컬럼(열)을 선택
+SELECT * FROM 회원테이블;                        // 모든 컬럼(열)을 선택
+SELECT 이름, 가입일자 FROM 회원테이블;            // 이름과 가입일자 컬럼만 조회
+SELECT * FROM 회원테이블 WHERE 수신동의 = 1;      // 수신동의가 '참'(1)인 회원만 조회
 ```
