Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -103,7 +103,7 @@ ALTER TABLE 회원테이블 MODIFY 성별 VARCHAR(20);
 ```sql
 ALTER TABLE 테이블명 CHANGE 기존컬럼명 새컬럼명 데이터타입;
 ```
-````sql
+```sql
 ALTER TABLE 회원테이블 CHANGE 성별 성 VARCHAR(2);
 ```
 </br>
