--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -178,3 +178,13 @@ DROP TABLE 회원정보;
 /* 회원정보 조회 --> 삭제되었기 때문에 조회되지 않음*/
 SELECT  *  FROM  회원테이블;
 ```
+</br>
+
+---
+
+### SQL 명령어 (3/6) : 데이터 조작어(DML) 
+</br>
+
+### <데이터 조작어(DML, Data Manipulation Language)>
+- 데이터를 삽입, 조회, 수정, 삭제할 때 사용하는 명령어
+<img width="940" height="233" alt="image" src="https://github.com/user-attachments/assets/ed7dbe0a-22a4-426d-9bda-2837587830e8" />
