--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -188,3 +188,7 @@ SELECT  *  FROM  회원테이블;
 ### <데이터 조작어(DML, Data Manipulation Language)>
 - 데이터를 삽입, 조회, 수정, 삭제할 때 사용하는 명령어
 <img width="940" height="233" alt="image" src="https://github.com/user-attachments/assets/ed7dbe0a-22a4-426d-9bda-2837587830e8" />
+</br>
+</br>
+
+### 1. INSERT
