Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -192,3 +192,15 @@ SELECT  *  FROM  회원테이블;
 </br>
 
 ### 1. INSERT
+- 테이블에 데이터 삽입
+```sql
+INSERT INTO 테이블명 VALUES (값1, 값2, ...);
+```
+```sql
+INSERT INTO 회원테이블 VALUES (1001, '홍길동', '2020-01-02', 1);
+INSERT INTO 회원테이블 VALUES (1002, '이순신', '2020-01-03', 0);
+INSERT INTO 회원테이블 VALUES (1003, '장영실', '2020-01-04', 1);
+INSERT INTO 회원테이블 VALUES (1004, '유관순', '2020-01-05', 0);
+```
+- 제약조건 위반 예시
+  - 중복된 기본키 삽입 시 오류 발생
