--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -67,14 +67,15 @@ CREATE TABLE 회원테이블 (
 </br>
 
 ### 2. SELECT
-- 테이블 조회
+- 테이블에서 특정 열 조회
 ```sql
 SELECT 컬럼명1, 컬럼명2, ... FROM 테이블명 WHERE 조건;
 ```
 ```sql
-SELECT * FROM 회원테이블;                        // 모든 컬럼(열)을 선택
-SELECT 이름, 가입일자 FROM 회원테이블;            // 이름과 가입일자 컬럼만 조회
+SELECT * FROM 회원테이블;                        // 모든 열을 조회
+SELECT 이름, 가입일자 FROM 회원테이블;            // 이름과 가입일자 열만 조회
 SELECT * FROM 회원테이블 WHERE 수신동의 = 1;      // 수신동의가 '참'(1)인 회원만 조회
+SELECT 회원번호, 이름 AS 성명 FROM 회원테이블;     // 특정 열 이름 변경하여 조회 (이름을 성명으로)
 ```
 </br>
 
@@ -207,3 +208,7 @@ INSERT INTO 회원테이블 VALUES (1002, '이순신', '2020-01-03', 0);
 INSERT INTO 회원테이블 VALUES (1003, '장영실', '2020-01-04', 1);
 INSERT INTO 회원테이블 VALUES (1004, '유관순', '2020-01-05', 0);
 ```
+</br>
+
+### 2. SELECT
+- 테이블에서 특정 열 조회
