--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -210,5 +210,23 @@ INSERT INTO 회원테이블 VALUES (1004, '유관순', '2020-01-05', 0);
 ```
 </br>
 
-### 2. SELECT
-- 테이블에서 특정 열 조회
+### 2. UPDATE
+- 테이블의 기존 데이터를 수정
+```sql
+UPDATE 테이블명 SET 컬럼명 = 새값 WHERE 조건;    
+```
+```sql
+UPDATE 회원테이블 SET 수신동의 = 0;                            // 전체 행의 수신동의 값을 0으로 변경
+UPDATE 회원테이블 SET 수신동의 = 1 WHERE 이름 = '홍길동';       // 이름이 '홍길동'인 회원만 수신동의 값을 1로 변경
+```
+</br>
+
+### DELETE
+- 테이블의 특정 데이터 삭제
+```sql
+DELETE FROM 테이블명 WHERE 조건;
+```
+```sql
+DELETE FROM 회원테이블 WHERE 이름 = '홍길동';        // 이름이 '홍길동'인 회원만 삭제
+DELETE FROM 회원테이블;                             // 모든 데이터 삭제
+```
