Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -331,3 +331,21 @@ SELECT  *
 ---
 
 ### SQL 명령어 (4/6) : 데이터 제어어(DCL)
+</br>
+
+### <데이터 제어어(DCL, Data Control Language)>
+- 데이터 접근 권한 부여 및 제거할 때 사용하는 명령어
+- 데이터베이스 관리자(DBA)가 특정 사용자(User)에게 데이터 접근 권한을 부여 및 제거할 때 사용하는 명령어
+<img width="940" height="279" alt="image" src="https://github.com/user-attachments/assets/c225c29a-e50b-4460-ad7d-df1c7b4ec49e" />
+</br>
+</br>
+
+### 1. CREATE USER
+- 새로운 사용자(계정) 생성
+```sql
+CREATE USER '계정명'@'호스트' IDENTIFIED BY '비밀번호';
+```
+```sql
+CREATE USER 'TEST'@'localhost' IDENTIFIED BY 'TEST';     // 로컬에서만 접속 가능한 TEST 계정
+CREATE USER 'kim'@'%' IDENTIFIED BY 'Abc123!';           // 모든 호스트에서 접속 가능한 kim 계정
+```
