Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -349,3 +349,17 @@ CREATE USER '계정명'@'호스트' IDENTIFIED BY '비밀번호';
 CREATE USER 'TEST'@'localhost' IDENTIFIED BY 'TEST';     // 로컬에서만 접속 가능한 TEST 계정
 CREATE USER 'kim'@'%' IDENTIFIED BY 'Abc123!';           // 모든 호스트에서 접속 가능한 kim 계정
 ```
+</br>
+
+### 2. SET PASSWORD / ALTER USER
+- 기존 사용자의 비밀번호 변경
+```sql
+SET PASSWORD FOR '계정명'@'호스트' = '새비밀번호';				// 구버전 방식
+
+ALTER USER '계정명'@'호스트' IDENTIFIED BY '새비밀번호';			// 권장 방식
+```
+```sql
+CREATE USER 'TEST'@'localhost' IDENTIFIED BY 'TEST';     // 로컬에서만 접속 가능한 TEST 계정
+CREATE USER 'kim'@'%' IDENTIFIED BY 'Abc123!';           // 모든 호스트에서 접속 가능한 kim 계정
+```
+</br>
