--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -235,7 +235,7 @@ DELETE FROM 회원테이블;                             // 모든 데이터 삭
 </br>
 </br>
 
-- 예제
+### - 예제
 ```sql
 /* Practice 데이터베이스 사용*/
 USE Practice;
@@ -400,7 +400,7 @@ REVOKE ALL ON Practice.회원테이블 FROM 'TEST'@'localhost';      		// 모든
 </br>
 </br>
 
-- 예제
+### - 예제
 ```sql
 /***************사용자 확인***************/
 /* MYSQL 데이터베이스 사용 */
@@ -460,6 +460,22 @@ SELECT  *
 
 ### <트랜젝션 (Transaction)>
 - 분할할 수 없는 최소 단위이며 논리적인 작업 단위
+<img width="768" height="301" alt="image" src="https://github.com/user-attachments/assets/ae3393fd-ef66-43b0-919e-48349afa09aa" />
+</br>
+
+### <실행(COMMIT), 취소(ROLLBACK)>
+- 실행(COMMIT): 모든 작업을 최종 실행
+- 취소(ROLLBACK): 모든 작업을 되돌림
+<img width="946" height="342" alt="image" src="https://github.com/user-attachments/assets/c28027d6-9c59-459e-85fd-1a886fd25c1c" />
+</br>
+
+### <임시저장(SAVEPOINT)>
+- ROLLBACK 저장점을 지정하는 명령어
+<img width="780" height="284" alt="image" src="https://github.com/user-attachments/assets/2766fa62-370c-4d4a-9258-164cced71121" />
+
+1. 실행: COMMIT 
+2. 취소: ROLLBACK 
+3. 임시저장: SAVEPOINT
 
 </br>
 </br>
