Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -118,6 +118,16 @@ ALTER TABLE 기존테이블명 RENAME 새테이블명;
 ALTER TABLE 회원테이블 RENAME 회원정보;
 ```
 </br>
+
+### 7. DROP TABLE
+- 테이블 삭제
+```sql
+DROP TABLE 테이블명;
+```
+```sql
+DROP TABLE 회원정보;   	// 회원정보 테이블 삭제
+```
+</br>
 </br>
 
 ### - 예제
@@ -482,4 +492,30 @@ SELECT  *
 3. 임시저장: SAVEPOINT
 
 </br>
+</br>
+
+### 1. BEGIN
+- 트랜잭션 시작 (자동 커밋을 잠시 끄고 수동으로 제어)
+```sql
+BEGIN;
+```
+</br>
+
+### 2. ROLLBACK
+- 트랜잭션 취소 (트랜잭션 시작 이후 실행된 변경 사항을 원상 복구)
+```sql
+ROLLBACK;
+```
+```sql
+BEGIN;
+INSERT INTO 회원테이블 VALUES (1001, '홍길동', '2020-01-02', 1);
+ROLLBACK;   														// 홍길동 데이터 삽입 취소
+```
+</br>
+
+### 1. BEGIN
+- 트랜잭션 시작 (자동 커밋을 잠시 끄고 수동으로 제어)
+```sql
+BEGIN;
+```
 </br>
