Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -509,13 +509,18 @@ ROLLBACK;
 ```sql
 BEGIN;
 INSERT INTO 회원테이블 VALUES (1001, '홍길동', '2020-01-02', 1);
-ROLLBACK;   						// 홍길동 데이터 삽입 취소
+	ROLLBACK;    // 홍길동 데이터 삽입 취소
 ```
 </br>
 
-### 1. BEGIN
-- 트랜잭션 시작 (자동 커밋을 잠시 끄고 수동으로 제어)
+### 3. COMMIT
+- 트랜잭션 확정 (트랜잭션 안에서 실행한 변경 사항을 DB에 반영)
+```sql
+COMMIT;
+```
 ```sql
 BEGIN;
+INSERT INTO 회원테이블 VALUES (1005, '장보고', '2020-01-06', 1);
+COMMIT;   // 장보고 데이터 확정 저장
 ```
 </br>
