Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -524,3 +524,24 @@ INSERT INTO 회원테이블 VALUES (1005, '장보고', '2020-01-06', 1);
 COMMIT;   // 장보고 데이터 확정 저장
 ```
 </br>
+
+### 4. SAVEPOINT
+- 트랜잭션 내에서 특정 시점(저장점)을 설정
+- 나중에 ROLLBACK TO 저장점으로 해당 지점까지 되돌릴 수 있음
+```sql
+SAVEPOINT 저장점이름;
+```
+```sql
+SAVEPOINT S1;
+```
+</br>
+
+### 4. ROLLBACK TO 저장점
+- 전체 트랜잭션을 취소하지 않고 특정 SAVEPOINT까지만 취소
+```sql
+ROLLBACK TO 저장점이름;
+```
+```sql
+ROLLBACK TO S2;   	// S2 시점으로 되돌림
+```
+</br>
