--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -545,3 +545,116 @@ ROLLBACK TO 저장점이름;
 ROLLBACK TO S2;   	// S2 시점으로 되돌림
 ```
 </br>
+</br>
+
+### - 예제
+```sql
+/* Practice 데이터베이스 사용*/
+USE Practice;
+
+/***************테이블 생성(Create)***************/
+/* (회원테이블 존재할 시, 회원테이블 삭제) */
+DROP TABLE 회원테이블;
+
+/* 회원테이블 생성 */
+CREATE TABLE 회원테이블 (
+회원번호 INT PRIMARY KEY,
+이름 VARCHAR(20),
+가입일자 DATE NOT NULL,
+수신동의 BIT
+);
+
+/* 회원테이블 조회 */
+SELECT  *  FROM  회원테이블;
+
+
+/***************BEGIN + 취소(ROLLBACK)*******************/  
+/* 트랜젝션 시작 */
+BEGIN;
+
+/* 데이터 삽입 */
+INSERT INTO 회원테이블 VALUES (1001, '홍길동', '2020-01-02', 1);
+
+/* 회원테이블 조회 */
+SELECT  *  FROM  회원테이블;
+
+/* 취소 */
+ROLLBACK;
+
+
+/* 회원테이블 조회 */
+SELECT  *  FROM  회원테이블;
+
+
+/***************BEGIN + 실행(COMMIT)*******************/  
+/* 트랜젝션 시작 */
+BEGIN;
+
+/* 데이터 삽입 */
+INSERT INTO 회원테이블 VALUES (1005, '장보고', '2020-01-06', 1);
+
+/* 실행 */
+COMMIT;
+
+/* 회원테이블 조회 */
+SELECT  *  FROM  회원테이블;
+
+
+/***************임시 저장(SAVEPOINT)*******************/ 
+/* (회원테이블에 데이터 존재할 시, 데이터 모두 삭제) */
+DELETE FROM 회원테이블;
+
+/* 회원테이블 조회 */
+SELECT  *  FROM  회원테이블;
+
+/* 트랜젝션 시작 */
+BEGIN;
+
+/* 데이터 삽입 */
+INSERT INTO 회원테이블 VALUES (1005, '장보고', '2020-01-06', 1);
+
+/* SAVEPOINT 지정 */
+SAVEPOINT S1;
+
+/* 1005 회원 이름 수정 */
+UPDATE  회원테이블
+   SET  이름 = '이순신';
+ 
+/* SAVEPOINT 지정 */
+SAVEPOINT S2;
+
+/* 1005 회원 데이터 삭제 */
+DELETE 
+  FROM  회원테이블;
+ 
+/* SAVEPOINT 지정 */
+SAVEPOINT S3;
+
+/* 회원테이블 조회 */
+SELECT  *  FROM  회원테이블;
+
+/* SAVEPOINT S2 저장점으로 ROLLBACK */
+ROLLBACK TO S2;
+ 
+/* 회원테이블 조회 */
+SELECT  *  FROM  회원테이블;
+
+/* 실행 */
+COMMIT;
+
+/* 회원테이블 조회 */
+SELECT  *  FROM  회원테이블;
+```
+</br>
+
+---
+
+### SQL 명령어 (5/6) : 트랜젝션 제어어(TCL)
+</br>
+
+### < SQL 기본명령어, 테이블 >
+<img width="737" height="322" alt="image" src="https://github.com/user-attachments/assets/c08af4fc-ad08-49a3-9ce3-48d6c3a9251e" />
+- SQL 기본명령어는 4가지
+
+<img width="484" height="400" alt="image" src="https://github.com/user-attachments/assets/523670d3-763f-4f12-9eaf-c1773b0dacab" />
+- 테이블, 데이터 타입 및 제약 조건
