Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -662,3 +662,22 @@ SELECT  *  FROM  회원테이블;
 
 - 테이블, 데이터 타입 및 제약 조건
 <img width="484" height="400" alt="image" src="https://github.com/user-attachments/assets/523670d3-763f-4f12-9eaf-c1773b0dacab" />
+</br>
+</br>
+</br>
+</br>
+
+### < 데이터 정의어, 조작어 >
+- 데이터정의어(DDL)
+<img width="437" height="434" alt="image" src="https://github.com/user-attachments/assets/d38d5b8c-0fd8-4230-8692-13cc77db619f" />
+</br>
+</br>
+</br>
+</br>
+
+- 데이터조작어(DML)
+<img width="467" height="466" alt="image" src="https://github.com/user-attachments/assets/ce23d26f-21db-4ec9-adba-4d5e9bf81da7" />
+</br>
+</br>
+</br>
+</br>
