Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -681,3 +681,14 @@ SELECT  *  FROM  회원테이블;
 </br>
 </br>
 </br>
+
+### < 데이터 제어어, 트랜젝션 제어어 >
+- 데이터 제어어(DCL)
+<img width="610" height="468" alt="image" src="https://github.com/user-attachments/assets/1305222e-31bf-48b9-880f-e229a76fe0d1" />
+</br>
+</br>
+</br>
+</br>
+
+- 트렌젝션 제어어(TCL)
+<img width="673" height="361" alt="image" src="https://github.com/user-attachments/assets/c4093e81-bbe7-4262-9358-c1e5c742229c" />
