--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -222,7 +222,20 @@ INSERT INTO 회원테이블 VALUES (1004, '유관순', '2020-01-05', 0);
 ```
 </br>
 
-### 2. UPDATE
+### 2. SELECT
+- 테이블에서 특정 열 조회
+```sql
+SELECT 컬럼명1, 컬럼명2, ... FROM 테이블명 WHERE 조건;
+```
+```sql
+SELECT * FROM 회원테이블;                        // 모든 열을 조회
+SELECT 이름, 가입일자 FROM 회원테이블;            // 이름과 가입일자 열만 조회
+SELECT * FROM 회원테이블 WHERE 수신동의 = 1;      // 수신동의가 '참'(1)인 회원만 조회
+SELECT 회원번호, 이름 AS 성명 FROM 회원테이블;     // 특정 열 이름 변경하여 조회 (이름을 성명으로)
+```
+</br>
+
+### 3. UPDATE
 - 테이블의 기존 데이터를 수정
 ```sql
 UPDATE 테이블명 SET 컬럼명 = 새값 WHERE 조건;    
@@ -233,7 +246,7 @@ UPDATE 회원테이블 SET 수신동의 = 1 WHERE 이름 = '홍길동';       //
 ```
 </br>
 
-### 3. DELETE
+### 4. DELETE
 - 테이블의 특정 데이터 삭제
 ```sql
 DELETE FROM 테이블명 WHERE 조건;
