Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -369,7 +369,7 @@ SELECT  *
 SELECT * FROM  USER;
 ```
 ```sql
-SELECT user, host FROM USER;   -- 계정명과 호스트만 확인
+SELECT user, host FROM USER;   // 계정명과 호스트만 확인
 ```
 
 ### 2. CREATE USER
