Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -4,5 +4,11 @@
 
 ### <데이터 조회(SELECT)>
 - 데이터 조작어(DML)이며, 데이터 분석에서 가장 많이 사용되는 명령어
-
+<img width="940" height="285" alt="image" src="https://github.com/user-attachments/assets/ab3d35ff-bd0a-4496-9d08-73b0ffea5ff9" />
 </br>
+</br>
+
+### <데이터 조회(SELECT)와 여러 절들>
+- SELECT는 여러 절들과 함께 사용되어, 분석에 필요한 데이터를 조회
+- 절: FROM, WHERE, GROUP BY, HAVING, ORDER BY
+<img width="912" height="420" alt="image" src="https://github.com/user-attachments/assets/98849b10-9818-43c2-9e94-9be199aa538a" />
