Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -7,8 +7,24 @@
 <img width="940" height="285" alt="image" src="https://github.com/user-attachments/assets/ab3d35ff-bd0a-4496-9d08-73b0ffea5ff9" />
 </br>
 </br>
+</br>
 
 ### <데이터 조회(SELECT)와 여러 절들>
 - SELECT는 여러 절들과 함께 사용되어, 분석에 필요한 데이터를 조회
 - 절: FROM, WHERE, GROUP BY, HAVING, ORDER BY
 <img width="912" height="420" alt="image" src="https://github.com/user-attachments/assets/98849b10-9818-43c2-9e94-9be199aa538a" />
+</br>
+</br>
+</br>
+
+### <FROM -> WHRE -> GROUP BY -> HAVING -> SELECT -> ORDER BY>
+- FROM -> WHERE -> GROUP BY 순으로 실행
+- FROM -> GROUP BY 순으로도 작성 가능
+- FROM: 테이블 확인
+- WHERE: FROM절 테이블을 특정 조건으로 필터링
+- GROUP BY: 열 별로 그룹화
+- HAVING: 그룹화된 새로운 테이블을 특정 조건으로 필터링
+- SELECT: 열 선택
+- ORDER BY: 열 정렬
+<img width="940" height="256" alt="image" src="https://github.com/user-attachments/assets/62153ff6-df2f-4634-8d34-32a7dfdb61d4" />
+<img width="940" height="237" alt="image" src="https://github.com/user-attachments/assets/bbf63b66-2b96-4aef-86be-27f237051238" />
