Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -28,3 +28,19 @@
 - ORDER BY: 열 정렬
 <img width="940" height="256" alt="image" src="https://github.com/user-attachments/assets/62153ff6-df2f-4634-8d34-32a7dfdb61d4" />
 <img width="940" height="237" alt="image" src="https://github.com/user-attachments/assets/bbf63b66-2b96-4aef-86be-27f237051238" />
+</br>
+</br>
+</br>
+
+### <GROUP BY + 집계함수>
+- GROUP BY는 집계함수와 주로 사용되는 명령어
+- 여러 열 별로 그룹화가 가능
+- GROUP BY에 있는 열들을 SELECT에도 작성해야 원하는 분석 결과를 확인 가능
+<img width="940" height="222" alt="image" src="https://github.com/user-attachments/assets/9694bfa2-8bed-4350-bb38-d3e7a9043912" />
+</br>
+</br>
+</br>
+
+### <SQL 명령어 작성법>
+- SQL 명령어를 보기 좋게 작성하기 위해서는 SPACE 및 TAB 키보드를 잘 활용해야 함
+<img width="742" height="484" alt="image" src="https://github.com/user-attachments/assets/180cf115-7f04-4c4e-8502-35e5d72811b2" />
